scss/accueil/_loading.scss
#loader {
    display: flex;
    flex-direction: column;
    top: -100px;
    opacity: 0;
    height: 0vh;
    width: 100vw;
    background-color: rgba(245, 245, 245, 0.95);
    position: fixed;
    z-index: 1;
    justify-content: center;
    align-items: center;
    animation-duration: 3s;
    animation-iteration-count: 1;
    animation-name: loader-visibility;
    div {
        display: flex;
        justify-content: center;
        align-items: flex-end;
        position: relative;
        i {
            font-size: 4rem;
            animation-duration: 3s;
            animation-iteration-count: 1;
            position: absolute;
            bottom: 30px;
            -webkit-background-clip: text;
            -webkit-text-fill-color: transparent;
            &.fa-bowl-food {
                animation-name: fa-bowl-food;
                background-image: linear-gradient(to bottom, $secondary -30%, $primary 100%);
            }
            &.fa-burger {
                animation-name: fa-burger;
                background-image: linear-gradient(to bottom, $tertiary -30%, $secondary 100%);
            }
            &.fa-carrot {
                animation-name: fa-carrot;
                background-image: linear-gradient(to bottom, $primary -30%, $tertiary 100%);
            }
        }
    }
    span {
        font-size: 18px;
        color: $primary;
        animation-duration: 3s;
        animation-iteration-count: 1;
        animation-name: loading-text;
    }
}

@keyframes loader-visibility {
    0% {
        top: 0;
        height: 100vh;
        opacity: 1;
    }
    90% {
        top: 0;
        height: 100vh;
        opacity: 1;
    }
    100% {
        top: 0;
        height: 0;
        opacity: 0;
    }
}

@keyframes loading-text {
    16% {
        color: $primary;
    }
    50% {
        color: $secondary;
    }
    83% {
        color: $tertiary;
    }
}

@keyframes fa-bowl-food {
    0% {
        opacity: 0;
        transform: scale(1);
    }
    16% {
        opacity: 100;
        transform: scale(1.2);
    }
    33% {
        opacity: 0;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(1);
    }
}

@keyframes fa-burger {
    0% {
        opacity: 0;
        transform: scale(1);
    }
    33% {
        opacity: 0;
        transform: scale(1);
    }
    50% {
        opacity: 100;
        transform: scale(1.2);
    }
    66% {
        opacity: 0;
        transform: scale(1);
    }
    100% {
        opacity: 0;
        transform: scale(1);
    }
}

@keyframes fa-carrot {
    0% {
        opacity: 0;
        transform: scale(1);
    }
    66% {
        opacity: 0;
        transform: scale(1);
    }
    83% {
        opacity: 100;
        transform: scale(1.2);
    }
    100% {
        opacity: 0;
        transform: scale(1);
    }
}

